feat(DataList): reversed order of truncate, fixed truncate for mds

--- a/src/patternfly/components/DataList/data-list-cell.hbs
+++ b/src/patternfly/components/DataList/data-list-cell.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}data-list__cell{{#if data-list-cell--modifier}} {{data-list-cell--modifier}}{{/if}}{{#if data-list-cell--IsTruncate}} pf-m-truncate{{/if}}"
+<div class="{{pfv}}data-list__cell{{#if data-list-cell--IsTruncate}} pf-m-truncate{{/if}}{{#if data-list-cell--modifier}} {{data-list-cell--modifier}}{{/if}}"
   {{#if data-list-cell--attribute}}
     {{{data-list-cell--attribute}}}
   {{/if}}>
