--- a/src/patternfly/components/DataList/data-list-text.hbs
+++ b/src/patternfly/components/DataList/data-list-text.hbs
@@ -1,9 +1,9 @@
-<span class="{{pfv}}data-list__text{{#if data-list-text--modifier}} {{data-list-text--modifier}}{{/if}}{{#if data-list-text--IsTruncate}} pf-m-truncate{{/if}}"
+<span class="{{pfv}}data-list__text{{#if data-list-text--IsTruncate}} pf-m-truncate{{/if}}{{#if data-list-text--modifier}} {{data-list-text--modifier}}{{/if}}"
   {{#if data-list-text--attribute}}
     {{{data-list-text--attribute}}}
   {{/if}}>  
-  {{#ifAny data-list-text--IsTruncate}}
+  {{#if data-list-text--IsTruncate}}
     tabindex="0"
-  {{/ifAny}}
+  {{/if}}
   {{> @partial-block}}
 </span>
