--- a/src/patternfly/demos/DataList/data-list-content-1.hbs
+++ b/src/patternfly/demos/DataList/data-list-content-1.hbs
@@ -9,8 +9,8 @@
   {{/l-flex}}
   {{#> l-flex l-flex--modifier="pf-m-wrap"}}
     {{> data-list--icon-text data-list--icon-text--icon="code-branch" data-list--icon-text--text="10"}}
-    {{> data-list--icon-text data-list--icon-text--icon="code" data-list--icon-text--text="4"}}
-    {{> data-list--icon-text data-list--icon-text--icon="cube" data-list--icon-text--text="5"}}
+    {{> data-list--icon-text data-list--icon-text--icon="code" data-list--icon-text--text="4" data-list--icon-text--screenreader-text="Code blocks"}}
+    {{> data-list--icon-text data-list--icon-text--icon="cube" data-list--icon-text--text="5" data-list--icon-text--screenreader-text="Workspaces"}}
     {{#> l-flex-item}}
       Updated 2 days ago
     {{/l-flex-item}}
