--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -27,7 +27,7 @@
   --#{$button}--TransitionProperty: color, background, border-width, border-color;
   --#{$button}--ScaleX: 1;
   --#{$button}--ScaleY: 1;
-  --#{$button}--after--Inset: 0;
+  --#{$button}--border--offset: 0;
 
   // Hover
   --#{$button}--hover--BackgroundColor: transparent;
@@ -185,7 +185,7 @@
   --#{$button}--m-plain--m-no-padding--hover__icon--Color: var(--pf-t--global--icon--color--regular);
   --#{$button}--m-plain--m-no-padding--hover--BackgroundColor: transparent;
   --#{$button}--m-plain--m-no-padding--m-clicked--BackgroundColor: transparent;
-  --#{$button}--m-plain--m-no-padding--after--Inset: calc(#{pf-size-prem(2px)} * -1);
+  --#{$button}--m-plain--m-no-padding--border--offset: calc(#{pf-size-prem(2px)} * -1);
 
   // Control
   --#{$button}--m-control--BorderRadius: var(--pf-t--global--border--radius--small);
@@ -412,7 +412,7 @@
 
   &::after {
     position: absolute;
-    inset: var(--#{$button}--after--Inset);
+    inset: var(--#{$button}--border--offset);
     pointer-events: none;
     content: "";
     border: var(--#{$button}--BorderWidth) solid;
@@ -695,7 +695,7 @@
       --#{$button}--PaddingInlineStart: var(--#{$button}--m-plain--m-no-padding--PaddingInlineStart);
       --#{$button}--m-small--PaddingInlineEnd: var(--#{$button}--m-plain--m-no-padding--m-small--PaddingInlineEnd);
       --#{$button}--m-small--PaddingInlineStart: var(--#{$button}--m-plain--m-no-padding--m-small--PaddingInlineStart);
-      --#{$button}--after--Inset: var(--#{$button}--m-plain--m-no-padding--after--Inset);
+      --#{$button}--border--offset: var(--#{$button}--m-plain--m-no-padding--border--offset);
 
       min-width: var(--#{$button}--m-plain--m-no-padding--MinWidth);
       background: var(--#{$button}--BackgroundColor); // override the ripple background
