chore(DataList): used icon-content--modifier instead

--- a/src/patternfly/demos/DataList/data-list--icon-text.hbs
+++ b/src/patternfly/demos/DataList/data-list--icon-text.hbs
@@ -1,7 +1,7 @@
 {{#> l-flex l-flex--modifier="pf-m-space-items-xs"}}
   {{#> l-flex-item}}
     {{#> icon}}
-      {{#> icon-content icon-content--modifier=data-list--icon-text--modifier}}
+      {{#> icon-content}}
         {{#if data-list--icon-text--icon}}
           <i class="fas fa-{{data-list--icon-text--icon}}" aria-hidden="true"></i>
         {{else}}
