--- a/src/patternfly/demos/DataList/data-list-content-2.hbs
+++ b/src/patternfly/demos/DataList/data-list-content-2.hbs
@@ -11,9 +11,9 @@
     {{> data-list--icon-text data-list--icon-text--icon="code-branch" data-list--icon-text--text="5"}}
     {{> data-list--icon-text data-list--icon-text--icon="code" data-list--icon-text--text="9" data-list--icon-text--screenreader-text="Code blocks"}}
     {{> data-list--icon-text data-list--icon-text--icon="cube" data-list--icon-text--text="2" data-list--icon-text--screenreader-text="Workspaces"}}
-    {{> data-list--icon-text data-list--icon-text--icon="check-circle" data-list--icon-text--modifier="pf-m-success" data-list--icon-text--text="11" data-list--icon-text--screenreader-text="Completed"}}
-    {{> data-list--icon-text data-list--icon-text--icon="exclamation-triangle" data-list--icon-text--modifier="pf-m-warning" data-list--icon-text--text="4" data-list--icon-text--screenreader-text="Warnings"}}
-    {{> data-list--icon-text data-list--icon-text--icon="exclamation-circle" data-list--icon-text--modifier="pf-m-danger" data-list--icon-text--text="1" data-list--icon-text--screenreader-text="Errors"}}
+    {{> data-list--icon-text data-list--icon-text--icon="check-circle" icon-content--modifier="pf-m-success" data-list--icon-text--text="11" data-list--icon-text--screenreader-text="Completed"}}
+    {{> data-list--icon-text data-list--icon-text--icon="exclamation-triangle" icon-content--modifier="pf-m-warning" data-list--icon-text--text="4" data-list--icon-text--screenreader-text="Warnings"}}
+    {{> data-list--icon-text data-list--icon-text--icon="exclamation-circle" icon-content--modifier="pf-m-danger" data-list--icon-text--text="1" data-list--icon-text--screenreader-text="Errors"}}
     {{#> l-flex-item}}
       Updated 2 days ago
     {{/l-flex-item}}
