--- a/src/patternfly/components/HelperText/helper-text-item-text.hbs
+++ b/src/patternfly/components/HelperText/helper-text-item-text.hbs
@@ -2,6 +2,19 @@
   {{#if helper-text-item-text--attribute}}
     {{{helper-text-item-text--attribute}}}
   {{/if}}>
+  {{#unless helper-text-item--HasNoIcon}}
+    {{#> screen-reader}}
+      {{#if helper-text-item--IsWarning}}
+        Warning: 
+      {{else if helper-text-item--IsSuccess}}
+        Success: 
+      {{else if helper-text-item--IsError}}
+        Error: 
+      {{else}}
+        Indeterminate: 
+      {{/if}}
+    {{/screen-reader}}
+  {{/unless}}
   {{#if helper-text--value}}
     {{{helper-text--value}}}
   {{else if @partial-block}}
