feat(tree-view): add high-contrast border (#7735)

--- a/src/patternfly/components/TreeView/tree-view.scss
+++ b/src/patternfly/components/TreeView/tree-view.scss
@@ -17,6 +17,11 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
   --#{$tree-view}__node--PaddingInlineStart: var(--#{$tree-view}__node--indent--base);
   --#{$tree-view}__node--Color: var(--pf-t--global--text--color--subtle);
   --#{$tree-view}__node--BackgroundColor: transparent;
+  --#{$tree-view}__node--BorderRadius: var(--#{$tree-view}__content--BorderRadius);
+  --#{$tree-view}__node--BorderColor: var(--pf-t--global--border--color--high-contrast);
+  --#{$tree-view}__node--BorderWidth: var(--pf-t--global--border--width--action--plain--default);
+  --#{$tree-view}__node--hover--BorderWidth: var(--pf-t--global--border--width--action--plain--hover);
+  --#{$tree-view}__node--m-current--BorderWidth: var(--pf-t--global--border--width--action--plain--clicked);
   --#{$tree-view}__node--m-current--Color: var(--pf-t--global--text--color--regular);
   --#{$tree-view}__node--m-current--BackgroundColor: var(--pf-t--global--background--color--primary--clicked);
   --#{$tree-view}__node--hover--BackgroundColor: var(--pf-t--global--background--color--primary--hover);
@@ -407,8 +412,18 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
   color: var(--#{$tree-view}__node--Color);
   background-color: var(--#{$tree-view}__node--BackgroundColor);
 
+  &::after {
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    content: "";
+    border: var(--#{$tree-view}__node--BorderWidth) solid var(--#{$tree-view}__node--BorderColor);
+    border-radius: var(--#{$tree-view}__node--BorderRadius);
+  }
+
   &.pf-m-current {
     --#{$tree-view}__node--Color: var(--#{$tree-view}__node--m-current--Color);
+    --#{$tree-view}__node--BorderWidth: var(--#{$tree-view}__node--m-current--BorderWidth);
   }
 
   .#{$tree-view}__node-count {
@@ -514,6 +529,8 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
 
 .#{$tree-view}__content:hover,
 .#{$tree-view}__content:focus-within {
+  --#{$tree-view}__node--BorderWidth: var(--#{$tree-view}__node--hover--BorderWidth);
+
   background-color: var(--#{$tree-view}__node--hover--BackgroundColor);
 }
 
