chore(dls): only render count badge if count is set

--- a/src/patternfly/components/DualListSelector/dual-list-selector-item.hbs
+++ b/src/patternfly/components/DualListSelector/dual-list-selector-item.hbs
@@ -21,12 +21,14 @@
         {{/dual-list-selector-item--text}}
       {{/dual-list-selector-item-text}}
     {{/dual-list-selector-item-main}}
-    {{#> dual-list-selector-item--count}}
-      {{#> dual-list-selector-item-count}}
-        {{#> badge badge--modifier="pf-m-read"}}
-          {{dual-list-selector-item--count}}
-        {{/badge}}
-      {{/dual-list-selector-item-count}}
-    {{/dual-list-selector-item--count}}
+    {{#if dual-list-selector-item--count}}
+      {{#> dual-list-selector-item--count}}
+        {{#> dual-list-selector-item-count}}
+          {{#> badge badge--modifier="pf-m-read"}}
+            {{dual-list-selector-item--count}}
+          {{/badge}}
+        {{/dual-list-selector-item-count}}
+      {{/dual-list-selector-item--count}}
+    {{/if}}
   </{{#if dual-list-selector-item--type}}{{dual-list-selector-item--type}}{{else}}span{{/if}}>
 {{/dual-list-selector-list-item-row}}
