--- a/src/patternfly/components/ExpandableSection/expandable-section-toggle.hbs
+++ b/src/patternfly/components/ExpandableSection/expandable-section-toggle.hbs
@@ -7,6 +7,7 @@
     button--IsInline=expandable-section--IsTruncate
     button--AriaExpanded=expandable-section--IsExpanded
     button--aria-controls=(ternary expandable-section--IsDetached (concat expandable-section--id '-content') null)
+    button--id=(concat expandable-section--id '-toggle')
     button--icon-template=(ternary expandable-section--IsTruncate null "expandable-section-toggle-icon")}}
     {{#if @partial-block}}
       {{> @partial-block}}
