fix(card): added missing body color variable

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -20,6 +20,7 @@
   --#{$card}__title-text--OverflowWrap: break-word;
   --#{$card}--c-button--disabled--Color: var(--pf-t--global--text--color--on-disabled);
   --#{$card}__body--FontSize: var(--pf-t--global--font--size--body--default);
+  --#{$card}__body--Color: var(--pf-t--global--text--color--regular);
   --#{$card}__footer--FontSize: var(--pf-t--global--font--size--body--default);
   --#{$card}__footer--Color: var(--pf-t--global--text--color--subtle);
   --#{$card}__actions--PaddingInlineStart: var(--pf-t--global--spacer--md);
