chore(card): include fallback for body color

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -442,7 +442,7 @@
 
 .#{$card}__body {
   font-size: var(--#{$card}__body--FontSize);
-  color: var(--#{$card}__body--Color);
+  color: var(--#{$card}__body--Color, inherit);
 }
 
 .#{$card}__footer {
