chore(login): update main-footer element

--- a/src/patternfly/components/Login/login-main-footer.hbs
+++ b/src/patternfly/components/Login/login-main-footer.hbs
@@ -1,6 +1,6 @@
-<footer class="{{pfv}}login__main-footer{{#if login-main-footer--modifier}} {{login-main-footer--modifier}}{{/if}}"
+<div class="{{pfv}}login__main-footer{{#if login-main-footer--modifier}} {{login-main-footer--modifier}}{{/if}}"
   {{#if login-main-footer--attribute}}
     {{{login-main-footer--attribute}}}
   {{/if}}>
   {{> @partial-block}}
-</footer>
+</div>
